--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -22,7 +22,6 @@
         "VRk2Ye1exWVA",
         "tozwpAhhnm69"
       ],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +123,7 @@
         "id": "RDHuIkoi6l9a"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Display Media File Metadata"
+        "### <font size=\"4\">» </font><font size=\"5\">Display Media File Metadata"
       ]
     },
     {
@@ -162,7 +161,7 @@
         "id": "NQ0TxfKeghR8"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Convert *Video File* ➔ *.mp4* (*Lossless*)"
+        "### <font size=\"4\">» </font><font size=\"5\">Convert *Video File* ➔ *.mp4* (*Lossless*)"
       ]
     },
     {
@@ -202,7 +201,7 @@
         "id": "NObEcBWAJoaz"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Convert *Video File* ➔ *.mkv* (*Lossless*)"
+        "### <font size=\"4\">» </font><font size=\"5\">Convert *Video File* ➔ *.mkv* (*Lossless*)"
       ]
     },
     {
@@ -242,14 +241,14 @@
         "id": "DnrhKfW53wRb"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Merge *Video File* + *Subs File* ➔ *.mkv* (*Lossless*)"
+        "### <font size=\"4\">» </font><font size=\"5\">Merge *Video File* + *Subs File* ➔ *.mkv* (*Lossless*)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "b1MjbVYZ3wRb"
+        "id": "b1MjbVYZ3wRb",
+        "cellView": "form"
       },
       "source": [
         "import os, sys, re\n",
@@ -268,12 +267,10 @@
         "os.environ['inputFile'] = video_file_path\n",
         "os.environ['inputSubsFile'] = subs_file_path\n",
         "os.environ['outputPath'] = output_file_path_raw\n",
-        "os.environ['startTime'] = start_time\n",
-        "os.environ['endTime'] = end_time\n",
         "os.environ['fileName'] = filename_raw\n",
         "os.environ['fileExtension'] = file_extension_raw\n",
         "\n",
-        "!ffmpeg -hide_banner -i \"$inputFile\" -i \"$inputSubsFile\" -c copy -strict -2 \"$outputPath\"/\"$fileName\".mkv"
+        "!ffmpeg -hide_banner -i \"$inputFile\" -i \"$inputSubsFile\" -c:v copy -c:a copy \"$outputPath\"/\"$fileName\"-out.mkv"
       ],
       "execution_count": null,
       "outputs": []
@@ -284,7 +281,7 @@
         "id": "FpJXJiRl6-gK"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Trim Video File (*Lossless*)"
+        "### <font size=\"4\">» </font><font size=\"5\">Trim Video File (*Lossless*)"
       ]
     },
     {
@@ -326,7 +323,7 @@
         "id": "SNDGdMRn3PA-"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Crop Video"
+        "### <font size=\"4\">» </font><font size=\"5\">Crop Video"
       ]
     },
     {
@@ -392,7 +389,7 @@
         "id": "2f-THZmDoOaY"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Extract Audio from Video File (*Lossless*)"
+        "### <font size=\"4\">» </font><font size=\"5\">Extract Audio from Video File (*Lossless*)"
       ]
     },
     {
@@ -428,7 +425,7 @@
         "id": "MSUasbRUDP3B"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Re-encode a Video to a Different Resolution"
+        "### <font size=\"4\">» </font><font size=\"5\">Re-encode a Video to a Different Resolution"
       ]
     },
     {
@@ -468,7 +465,7 @@
         "id": "9UagRtLPyKoQ"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Extract Individual Frames from Video"
+        "### <font size=\"4\">» </font><font size=\"5\">Extract Individual Frames from Video"
       ]
     },
     {
@@ -515,7 +512,7 @@
         "id": "GahMjYf8miNs"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Generate Thumbnails - Preview from Video (3x2)"
+        "### <font size=\"4\">» </font><font size=\"5\">Generate Thumbnails - Preview from Video (3x2)"
       ]
     },
     {
@@ -556,7 +553,7 @@
         "id": "7-3O4en4C4IL"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Convert Audio Filetype (*mp3, m4a, ogg, flac, etc.*)"
+        "### <font size=\"4\">» </font><font size=\"5\">Convert Audio Filetype (*mp3, m4a, ogg, flac, etc.*)"
       ]
     },
     {
@@ -595,7 +592,7 @@
         "id": "VRk2Ye1exWVA"
       },
       "source": [
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">Extract + Upload Frames from Video</font>"
+        "### <font size=\"4\">» </font><font size=\"5\">Extract + Upload Frames from Video</font>"
       ]
     },
     {
@@ -679,7 +676,7 @@
       },
       "source": [
         "\n",
-        "### <font face=\"Rubik\" size=\"4\">» </font><font face=\"Rubik\" size=\"5\">MediaInfo</font>"
+        "### <font size=\"4\">» </font><font size=\"5\">MediaInfo</font>"
       ]
     },
     {
