--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -476,7 +476,7 @@
       },
       "source": [
         "#@markdown This will create a folder in the same directory titled \"`Extracted Frames`\"\n",
-        "#@markdown [\*Example\*](https://yuju.pw/y/36pP.png) *of output folder <br>\n",
+        "#@markdown ![*Example*](https://yuju.pw/y/36pP.png) *of output folder <br>\n",
         "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
