--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -476,7 +476,7 @@
       },
       "source": [
         "#@markdown This will create a folder in the same directory titled \"`Extracted Frames`\"\n",
-        "#@markdown ![Example](https://yuju.pw/y/36pP.png) *of output folder <br>\n",
+        "#@markdown * [*Example*](https://yuju.pw/y/36pP.png) *of output folder*,
         "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
@@ -522,7 +522,7 @@
         "id": "J2u-Rha8miNy"
       },
       "source": [
-        "# @markdown Example of output image: https://yuju.pw/y/39i2.png <br>\n",
+        "#@markdown Example of output image: https://yuju.pw/y/39i2.png <br>\n",
         "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
