--- a/FFmpeg.ipynb
+++ b/FFmpeg.ipynb
@@ -28,7 +28,7 @@
       "name": "python3",
       "display_name": "Python 3"
     },
-    "accelerator": "GPU"
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -52,14 +52,17 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "hFeE-qPuhTiK",
-        "cellView": "form"
-      },
       "source": [
-        "#@title <font size=\"5\">← ឵឵<i>Upgrade FFmpeg to v4.2.2</font> { vertical-output: true }\n",
+        "#@title <font size=\"5\">← ឵឵<i>Upgrade FFmpeg to v5.0</font> { vertical-output: true }\n",
+        "import os, uuid, re, IPython\n",
+        "import ipywidgets as widgets\n",
+        "import time\n",
+        "\n",
+        "from glob import glob\n",
+        "from google.colab import output, drive\n",
+        "\n",
         "from IPython.display import clear_output\n",
-        "import os, urllib.request\n",
+        "import os, sys, urllib.request\n",
         "HOME = os.path.expanduser(\"~\")\n",
         "pathDoneCMD = f'{HOME}/doneCMD.sh'\n",
         "if not os.path.exists(f\"{HOME}/.ipython/ttmg.py\"):\n",
@@ -72,15 +75,20 @@
         ")\n",
         "\n",
         "loadingAn(name=\"lds\")\n",
-        "textAn(\"Installing Dependencies...\", ty='twg')\n",
-        "os.system('pip install git+git://github.com/AWConant/jikanpy.git')\n",
-        "os.system('add-apt-repository -y ppa:jonathonf/ffmpeg-4')\n",
-        "os.system('apt-get update')\n",
-        "os.system('apt install mediainfo')\n",
-        "os.system('apt-get install ffmpeg')\n",
+        "textAn(\"Cloning Repositories...\", ty='twg')\n",
+        "!git clone https://github.com/XniceCraft/ffmpeg-colab.git\n",
+        "!chmod 755 ./ffmpeg-colab/install\n",
+        "textAn(\"Installing FFmpeg...\", ty='twg')\n",
+        "!./ffmpeg-colab/install\n",
         "clear_output()\n",
-        "print('Installation finished.')"
+        "print('Installation finished!')\n",
+        "!rm -fr /content/ffmpeg-colab\n",
+        "!ffmpeg -version"
       ],
+      "metadata": {
+        "cellView": "form",
+        "id": "J9ujW1gQruFN"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -133,27 +141,14 @@
         "cellView": "form"
       },
       "source": [
+        "#@title <font size=\"3\"> *You can ignore the* `At least one output file must be specified` *error for this cell*\n",
         "import os, sys, re\n",
-        "\n",
-        "media_file_path = \"\" #@param {type:\"string\"}\n",
-        "\n",
+        "media_file_path = \"/content/drive/Shareddrives/K-POP_BACKUP/Brave Girls/Brave Girls - High Heels (Bugs!).mp4\" #@param {type:\"string\"}\n",
         "os.environ['inputFile'] = media_file_path\n",
-        "\n",
         "!ffmpeg -i \"$inputFile\" -hide_banner"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "X4yIG_nqYAoH"
-      },
-      "source": [
-        "> *You can ignore the* \"`At least one output file must be specified`\" *error after running this.*\n",
-        "\n",
-        "\n"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -173,7 +168,7 @@
       "source": [
         "import os, sys, re\n",
         "\n",
-        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "video_file_path = \"/content/drive/Shareddrives/Movies/Ironman.mov\" #@param {type:\"string\"}\n",
         "\n",
         "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
         "output_file_path_raw = output_file_path.group(0)\n",
@@ -213,7 +208,7 @@
       "source": [
         "import os, sys, re\n",
         "\n",
-        "video_file_path = \"\" #@param {type:\"string\"}\n",
+        "video_file_path = \"/content/drive/Shareddrives/Movies/Ironman.mp4\" #@param {type:\"string\"}\n",
         "\n",
         "output_file_path = re.search(\"^[\\/].+\\/\", video_file_path)\n",
         "output_file_path_raw = output_file_path.group(0)\n",
@@ -225,12 +220,12 @@
         "\n",
         "os.environ['inputFile'] = video_file_path\n",
         "os.environ['outputPath'] = output_file_path_raw\n",
-        "os.environ['startTime'] = start_time\n",
-        "os.environ['endTime'] = end_time\n",
         "os.environ['fileName'] = filename_raw\n",
         "os.environ['fileExtension'] = file_extension_raw\n",
         "\n",
-        "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict -2 \"$outputPath\"/\"$fileName\".mkv"
+        "!ffmpeg -hide_banner -i \"$inputFile\" -c copy -strict -2 \"$outputPath\"/\"$fileName\".mkv\n",
+        "clear_output()\n",
+        "print('Process complete.')"
       ],
       "execution_count": null,
       "outputs": []
@@ -686,7 +681,7 @@
         "cellView": "form"
       },
       "source": [
-        "path = \"\" #@param {type:\"string\"}\n",
+        "path = \"/content/drive/Shareddrives/K-POP/Brave Girls/Brave Girls - High Heels (Bugs!).mp4\" #@param {type:\"string\"}\n",
         "save_txt = False #@param {type:\"boolean\"}\n",
         "import os, uuid, re, IPython\n",
         "import ipywidgets as widgets\n",
@@ -695,6 +690,10 @@
         "from glob import glob\n",
         "from IPython.display import HTML, clear_output\n",
         "from google.colab import output, drive\n",
+        "\n",
+        "if not os.path.exists(\"/usr/bin/mediainfo\"):\n",
+        "  textAn(\"Installing MediaInfo...\", ty='twg')\n",
+        "  get_ipython().system_raw(\"apt-get install mediainfo\")\n",
         "\n",
         "def mediainfo():\n",
         "  display(HTML(\"<br>\"))\n",
@@ -724,9 +723,6 @@
         "    clear_output(wait=True)\n",
         "  except:\n",
         "    clear_output()\n",
-        "    \n",
-        "if not os.path.exists(\"/usr/bin/mediainfo\"):\n",
-        "  get_ipython().system_raw(\"apt-get install mediainfo\")\n",
         "  \n",
         "mediainfo()"
       ],
